# rtedwards.github.io

./: .gitignore  2021-01-06_vectorization.md  LICENSE.md  README.md  _config.yml  _quarto.yml  about.md  about.qmd  atom.xml  config.md  config.toml  contact.html  footer.html  how_to.md  index.html  index.qmd  pyproject.toml  robots.txt  search_index.en.js  sitemap.xml
.github/workflows/: github-actions.yaml  zola-deploy-action.yml
Bear Toes/: config.md
Bear Toes/_layout/: nav.html
BearToes/: Manifest.toml  Project.toml  config.md  vectorization.md
BearToes/_css/: adjust.css
BearToes/_layout/: sidebar.html
RobertEdwards/: index.md
RobertEdwards/_css/: jtd.css
RobertEdwards/_layout/: page_foot.html  pgwrap.html  style.html
_css/: franklin.css
_drafts/: exam-season.md
_posts/: 2021-01-07_vectorization.md
about/: index.html
assets/eye_balling_it/: normalized-combined-10.html  normalized-combined-100.html  normalized-combined-1000.html  normalized-combined-jitter10.html  normalized-combined-jitter100.html  normalized-combined-jitter1000.html
assets/test/: geojson_layer.html
content/: index.html
content/about/: index.md
content/posts/: 2023-08-13_walrus.md  first.md  (+8 more)
css/: dark.scss  light.scss  main.css  monokai-light.css
docs/: LICENSE.html  about.html  index.html  index.xml  listings.json  robots.txt  search.json  sitemap.xml
highlight_themes/: tomorrow-dark.tmTheme
posts/: _metadata.yml  index.html  index.qmd
static/: katex-dark.css  katex.css
tags/: index.html
templates/: 404.html  base.html  index.html  page.html  posts.html
(+43 files in other folders)
