[tool.poetry]
name = "rtedwards-github-io"
version = "0.1.0"
description = "Blog"
authors = ["Robert Edwards"]
license = "MIT"
readme = "README.md"
packages = [{include = "rtedwards"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
torchvision = "^0.16.2"
jupyter = "^1.0.0"
altair = "^5.2.0"
jupyterlab = "^4.0.10"
pandas = "^2.1.4"
pyarrow = "^14.0.2"
pydeck = "^0.8.0"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
pylint = "^3.0.3"
mypy = "^1.8.0"
vega-datasets = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
