[tool.poetry]
name = "rtedwards-github-io"
version = "0.1.0"
description = "Blog"
authors = ["Robert Edwards"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torchvision = "^0.21.0"
jupyter = "^1.1.1"
jupyterlab = "^4.3.5"
ipykernel = "^6.29.5"
altair = "^5.5.0"
pandas = "^2.2.3"
pyarrow = "^19.0.1"
pydeck = "^0.9.1"
scikit-learn = "^1.6.1"
vega-datasets = "^0.9.0"
tqdm = "^4.67.1"
ipywidgets = "^8.1.5"
ruff = "^0.11.5"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
